# chess

./: .gitignore  CMakeLists.txt  README.md  init.py  readme.md  requirements.txt  run.sh
headers/: board.h  gvector.h  move.h  piece.h  position.h
server/: db.sqlite3  init.py
server/basic/: managers.py  models.py  tests.py  urls.py  views.py
server/basic/frontend/: home.html  login.html  registration.html  template.html
server/basic/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_is_staff.py  0004_rename_is_staff_user_is_superuser.py  0005_alter_user_is_active.py  0006_alter_user_managers.py  0007_rename_is_superuser_user_is_staff.py  0008_user_groups_user_is_superuser_user_user_permissions.py  0009_chessgame.py  0010_chessgame_black_chessgame_white.py  0011_remove_user_is_staff_alter_chessgame_black_and_more.py  0012_alter_chessgame_black_alter_chessgame_result_and_more.py  0013_alter_chessgame_black_alter_chessgame_white.py  0014_alter_chessgame_black_alter_chessgame_white.py
server/play/: consumers.py  routing.py  urls.py  views.py
server/play/frontend/: bot.html  game.html
server/server/: asgi.py  settings.py  urls.py
server/static/js/: chessboard-1.0.0.js
source/: engine.cpp  eval.h  main.cpp  main.h  tests.cpp  tests.h
source/geometry/: gvector.cpp  gvector.h
source/logic/: board.cpp  board.h  move.cpp  move.h  piece.cpp  piece.h  position.cpp  position.h
src/: board.cpp  gvector.cpp  move.cpp  piece.cpp  position.cpp
tests/: main_test.cpp  test1.txt  test11.txt  test12.txt  test2.txt  test5.txt  tests.cpp  tests.h
tests_data/: logs  test10.in  test10.out  test11.out  test12.out  test13.in  test13.out  test14.in  test14.out  test15.in  test15.out  test4.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
